[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/enemy/frozen head boss/phase2_mk2.png" type="Texture" id=1]
[ext_resource path="res://src/environment/mrpresident.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/ew ew ew wssshhhhhhh.wav" type="AudioStream" id=3]
[ext_resource path="res://src/ui/health_bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/actors/player/weapons/ranged.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/actors/player/weapons/mrpresidentweapon.gd" type="Script" id=6]
[ext_resource path="res://src/actors/tar enemy/tarenemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/actors/tar enemy/tar.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/enemy/frozen head boss/default_mk2.png" type="Texture" id=9]
[ext_resource path="res://mrpresident_arm_right.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/actors/mr president fight/tricklestar.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/palette.bmp" type="Texture" id=17]
[ext_resource path="res://assets/GUI/healthbar.png" type="Texture" id=18]
[ext_resource path="res://assets/GUI/buttonunpressed1.png" type="Texture" id=19]
[ext_resource path="res://assets/GUI/buttonunpressed2.png" type="Texture" id=20]
[ext_resource path="res://assets/GUI/buttonpressed 2.png" type="Texture" id=21]
[ext_resource path="res://assets/GUI/buttonpressed1.png" type="Texture" id=22]
[ext_resource path="res://assets/fonts/Orwell.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://src/environment/laser.tscn" type="PackedScene" id=25]
[ext_resource path="res://src/actors/tar enemy/tarpit.tscn" type="PackedScene" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "phase2",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 104, 147.5 )

[sub_resource type="StyleBoxTexture" id=3]
margin_right = 10.0491
margin_top = 52.822
margin_bottom = 57.0785

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 20 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 21 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 23 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 45, 21 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 45, 21 )
modulate_color = Color( 0.372549, 0.513726, 0.247059, 1 )

[sub_resource type="Theme" id=13]
resource_local_to_scene = true
default_font = SubResource( 11 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/styles/buttontexture = SubResource( 3 )
Button/styles/disabled = SubResource( 4 )
Button/styles/focus = SubResource( 5 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 7 )
Button/styles/pressed = SubResource( 8 )
ColorPicker/icons/add_preset = null
ColorPicker/icons/color_hue = null
ColorPicker/icons/color_sample = ExtResource( 17 )
ColorPicker/icons/overbright_indicator = null
Fonts/fonts/large = SubResource( 11 )
Fonts/fonts/normal = SubResource( 11 )
ProgressBar/colors/font_color = Color( 0.94, 0.94, 0.94, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/styles/bg = SubResource( 9 )
ProgressBar/styles/fg = SubResource( 12 )
TextEdit/colors/background_color = Color( 0, 0, 0, 0 )
TextEdit/colors/bookmark_color = Color( 0.08, 0.49, 0.98, 1 )
TextEdit/colors/brace_mismatch_color = Color( 1, 0.2, 0.2, 1 )
TextEdit/colors/breakpoint_color = Color( 0.8, 0.8, 0.4, 0.2 )
TextEdit/colors/caret_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/code_folding_color = Color( 0.8, 0.8, 0.8, 0.8 )
TextEdit/colors/completion_background_color = Color( 0.262745, 0.156863, 0.180392, 1 )
TextEdit/colors/completion_existing_color = Color( 0.87, 0.87, 0.87, 0.13 )
TextEdit/colors/completion_font_color = Color( 0.67, 0.67, 0.67, 1 )
TextEdit/colors/completion_scroll_color = Color( 1, 1, 1, 0.29 )
TextEdit/colors/completion_selected_color = Color( 0.14902, 0.0666667, 0.0666667, 1 )
TextEdit/colors/current_line_color = Color( 0.25, 0.25, 0.26, 0.8 )
TextEdit/colors/executing_line_color = Color( 0.2, 0.8, 0.2, 0.4 )
TextEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/font_color_readonly = Color( 0.88, 0.88, 0.88, 0.5 )
TextEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
TextEdit/colors/function_color = Color( 0.4, 0.64, 0.81, 1 )
TextEdit/colors/line_number_color = Color( 0.67, 0.67, 0.67, 0.4 )
TextEdit/colors/mark_color = Color( 1, 0.4, 0.4, 0.4 )
TextEdit/colors/member_variable_color = Color( 0.9, 0.31, 0.35, 1 )
TextEdit/colors/number_color = Color( 0.92, 0.58, 0.2, 1 )
TextEdit/colors/safe_line_number_color = Color( 0.67, 0.78, 0.67, 0.6 )
TextEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
TextEdit/colors/symbol_color = Color( 0.94, 0.94, 0.94, 1 )
TextEdit/colors/word_highlighted_color = Color( 0.8, 0.9, 0.9, 0.15 )
TextEdit/constants/completion_lines = 7
TextEdit/constants/completion_max_width = 50
TextEdit/constants/completion_scroll_width = 6
TextEdit/constants/line_spacing = 4
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/space = null
TextEdit/icons/tab = null
TextEdit/styles/completion = null
TextEdit/styles/focus = null
TextEdit/styles/normal = null
TextEdit/styles/read_only = null

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 104.5, 143.5 )

[node name="mrpresident" type="Area2D"]
z_index = 3
script = ExtResource( 2 )
TarEnemy = ExtResource( 7 )
presidentattack = ExtResource( 8 )

[node name="right" parent="." instance=ExtResource( 10 )]
position = Vector2( 160, 29 )
z_index = 1
lor = true
radius = 200.0

[node name="left" parent="." instance=ExtResource( 10 )]
position = Vector2( -168, 29 )
z_index = 1
radius = 200.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "phase2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5, 7 )
shape = SubResource( 2 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -48.0
margin_top = 164.0
margin_right = 52.0
margin_bottom = 185.0
theme = SubResource( 13 )

[node name="phase" type="Timer" parent="."]
wait_time = 30.0

[node name="weapon" parent="." instance=ExtResource( 5 )]
script = ExtResource( 6 )
TarEnemy = ExtResource( 26 )
presidentattack = ExtResource( 16 )
attack2 = ExtResource( 25 )
attack3 = null

[node name="deathtimer" type="Timer" parent="."]

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 6.0

[node name="attack1" type="Timer" parent="."]
wait_time = 3.0

[node name="attack2" type="Timer" parent="."]
wait_time = 3.0

[node name="cooldowntimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -5.5, 5.5 )
shape = SubResource( 14 )

[node name="weapon_p2_1" parent="." instance=ExtResource( 5 )]
position = Vector2( 142, 27 )
script = ExtResource( 6 )
TarEnemy = ExtResource( 7 )
presidentattack = ExtResource( 16 )
attack2 = ExtResource( 25 )
attack3 = null

[node name="weapon_p2_2" parent="." instance=ExtResource( 5 )]
position = Vector2( -124, 38 )
script = ExtResource( 6 )
TarEnemy = ExtResource( 7 )
presidentattack = ExtResource( 16 )
attack2 = ExtResource( 25 )
attack3 = ExtResource( 16 )

[node name="coold2" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="phase" to="." method="_on_phase_timeout"]
[connection signal="timeout" from="deathtimer" to="." method="_on_deathtimer_timeout"]
[connection signal="timeout" from="attack1" to="." method="_on_attack1_timeout"]
[connection signal="timeout" from="attack2" to="." method="_on_attack2_timeout"]
[connection signal="timeout" from="cooldowntimer" to="." method="_on_cooldowntimer_timeout"]
[connection signal="timeout" from="coold2" to="." method="_on_coold2_timeout"]
